objects/Category_History__c.object
<CustomObject>
    <fields>
        <fullName>Category_Score__c</fullName>
        <label>Category Score</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Date_Computed__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Date Computed</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Direction_Of_Risk__c</fullName>
        <label>Direction Of Risk</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Increasing</fullName>
                </value>
                <value>
                    <fullName>Stable</fullName>
                </value>
                <value>
                    <fullName>Decreasing</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Model_Category_DefinitionLookup__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Model Category Definition</label>
        <referenceTo>Model_Category_Definition__c</referenceTo>
        <relationshipLabel>Category History</relationshipLabel>
        <relationshipName>Category_History</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Model_Category_Definition__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Model Category Definition</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Score__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Score</label>
        <referenceTo>Score__c</referenceTo>
        <relationshipLabel>Category History</relationshipLabel>
        <relationshipName>Category_History</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Category History</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Model_Category_DefinitionLookup__c</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>Custom</fullName>
        <columns>Category_Score__c</columns>
        <columns>Date_Computed__c</columns>
        <columns>UPDATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <label>Custom</label>
    </listViews>
    <listViews>
        <fullName>Custom_View</fullName>
        <columns>Model_Category_DefinitionLookup__c</columns>
        <columns>Category_Score__c</columns>
        <columns>Date_Computed__c</columns>
        <columns>UPDATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <label>Custom View</label>
    </listViews>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Category History Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Category History</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>